// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`interpreter/functions#pieVis logs correct datatable to inspector 1`] = `
Object {
  "columns": Array [
    Object {
      "id": "col-0-1",
      "meta": Object {
        "dimensionName": "Slice size",
        "type": "number",
      },
      "name": "Count",
    },
  ],
  "rows": Array [
    Object {
      "col-0-1": 0,
    },
  ],
  "type": "datatable",
}
`;

exports[`interpreter/functions#pieVis returns an object with the correct structure for donut 1`] = `
Object {
  "as": "partitionVis",
  "type": "render",
  "value": Object {
    "params": Object {
      "listenOnChange": true,
    },
    "syncColors": false,
    "visConfig": Object {
      "addTooltip": true,
      "ariaLabel": undefined,
      "buckets": Array [
        Object {
          "accessor": 1,
          "format": Object {
            "id": "number",
            "params": Object {},
          },
          "type": "vis_dimension",
        },
        Object {
          "accessor": 2,
          "format": Object {
            "id": "number",
            "params": Object {},
          },
          "type": "vis_dimension",
        },
        Object {
          "accessor": 3,
          "format": Object {
            "id": "number",
            "params": Object {},
          },
          "type": "vis_dimension",
        },
      ],
      "dimensions": Object {
        "buckets": Array [
          Object {
            "accessor": 1,
            "format": Object {
              "id": "number",
              "params": Object {},
            },
            "type": "vis_dimension",
          },
          Object {
            "accessor": 2,
            "format": Object {
              "id": "number",
              "params": Object {},
            },
            "type": "vis_dimension",
          },
          Object {
            "accessor": 3,
            "format": Object {
              "id": "number",
              "params": Object {},
            },
            "type": "vis_dimension",
          },
        ],
        "metric": Object {
          "accessor": 0,
          "format": Object {
            "id": "number",
            "params": Object {},
          },
          "type": "vis_dimension",
        },
        "splitColumn": undefined,
        "splitRow": undefined,
      },
      "distinctColors": false,
      "emptySizeRatio": 0.3,
      "isDonut": true,
      "labels": Object {
        "last_level": false,
        "percentDecimals": 2,
        "position": "default",
        "show": false,
        "truncate": 100,
        "type": "partitionLabelsValue",
        "values": true,
        "valuesFormat": "percent",
      },
      "legendDisplay": "show",
      "legendPosition": "right",
      "legendSize": 80,
      "maxLegendLines": 2,
      "metric": Object {
        "accessor": 0,
        "format": Object {
          "id": "number",
          "params": Object {},
        },
        "type": "vis_dimension",
      },
      "nestedLegend": true,
      "palette": Object {
        "name": "kibana_palette",
        "type": "system_palette",
      },
      "respectSourceOrder": true,
      "splitColumn": undefined,
      "splitRow": undefined,
      "startFromSecondLargestSlice": true,
      "truncateLegend": true,
    },
    "visData": Object {
      "columns": Array [
        Object {
          "id": "col-0-1",
          "meta": Object {
            "type": "number",
          },
          "name": "Count",
        },
      ],
      "rows": Array [
        Object {
          "col-0-1": 0,
        },
      ],
      "type": "datatable",
    },
    "visType": "donut",
  },
}
`;

exports[`interpreter/functions#pieVis returns an object with the correct structure for pie 1`] = `
Object {
  "as": "partitionVis",
  "type": "render",
  "value": Object {
    "params": Object {
      "listenOnChange": true,
    },
    "syncColors": false,
    "visConfig": Object {
      "addTooltip": true,
      "ariaLabel": undefined,
      "buckets": Array [
        Object {
          "accessor": 1,
          "format": Object {
            "id": "number",
            "params": Object {},
          },
          "type": "vis_dimension",
        },
        Object {
          "accessor": 2,
          "format": Object {
            "id": "number",
            "params": Object {},
          },
          "type": "vis_dimension",
        },
        Object {
          "accessor": 3,
          "format": Object {
            "id": "number",
            "params": Object {},
          },
          "type": "vis_dimension",
        },
      ],
      "dimensions": Object {
        "buckets": Array [
          Object {
            "accessor": 1,
            "format": Object {
              "id": "number",
              "params": Object {},
            },
            "type": "vis_dimension",
          },
          Object {
            "accessor": 2,
            "format": Object {
              "id": "number",
              "params": Object {},
            },
            "type": "vis_dimension",
          },
          Object {
            "accessor": 3,
            "format": Object {
              "id": "number",
              "params": Object {},
            },
            "type": "vis_dimension",
          },
        ],
        "metric": Object {
          "accessor": 0,
          "format": Object {
            "id": "number",
            "params": Object {},
          },
          "type": "vis_dimension",
        },
        "splitColumn": undefined,
        "splitRow": undefined,
      },
      "distinctColors": false,
      "emptySizeRatio": 0.3,
      "isDonut": false,
      "labels": Object {
        "last_level": false,
        "percentDecimals": 2,
        "position": "default",
        "show": false,
        "truncate": 100,
        "type": "partitionLabelsValue",
        "values": true,
        "valuesFormat": "percent",
      },
      "legendDisplay": "show",
      "legendPosition": "right",
      "legendSize": 80,
      "maxLegendLines": 2,
      "metric": Object {
        "accessor": 0,
        "format": Object {
          "id": "number",
          "params": Object {},
        },
        "type": "vis_dimension",
      },
      "nestedLegend": true,
      "palette": Object {
        "name": "kibana_palette",
        "type": "system_palette",
      },
      "respectSourceOrder": true,
      "splitColumn": undefined,
      "splitRow": undefined,
      "startFromSecondLargestSlice": true,
      "truncateLegend": true,
    },
    "visData": Object {
      "columns": Array [
        Object {
          "id": "col-0-1",
          "meta": Object {
            "type": "number",
          },
          "name": "Count",
        },
      ],
      "rows": Array [
        Object {
          "col-0-1": 0,
        },
      ],
      "type": "datatable",
    },
    "visType": "pie",
  },
}
`;

exports[`interpreter/functions#pieVis throws error if provided split row and split column at once 1`] = `"A split row and column are specified. Expression is supporting only one of them at once."`;
